# zero2prod

./: Cargo.toml  Dockerfile  compose.yaml  configuration.yaml  dagger.json
.github/workflows/: dagger.yaml
dagger/: go.mod  main.go
migrations/: 20250101033106_create_subscriptions_table.sql  20250116171927_make_status_not_null_in_subscriptions.sql
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: helpers.rs  subscriptions.rs  subscriptions_confirm.rs
