[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
axum = "0.7.9"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.41.1", features = ["rt","macros", "rt-multi-thread"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls", "postgres", "migrate", "uuid", "macros", "chrono" ] }
config = "0.15.4"
uuid = { version = "1.11.0", features = ["v4"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-log = "0.2.0"
tracing-bunyan-formatter = "0.3.10"
secrecy = { version = "0.10.3", features = ["serde"] }
unicode-segmentation = "1.12.0"
validator = "0.19.0"
reqwest = { version = "0.12.9", features = ["json", "rustls-tls"] }
wiremock = "0.6.2"
lettre = { version = "0.11.11", features = ["tracing", "builder", "hostname", "pool", "smtp-transport", "tokio1-rustls-tls"], default-features = false }
url = "2.5.4"

[dev-dependencies]
maik = "0.1.0"
fake = "3.1.0"
once_cell = "1.20.2"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
reqwest = "0.12.9"
